Tue Mar 7 15:09:44 1995 Keith Vetter (keithv@fusion.com)

	* osconf.win: new file. Windows version of osconf with valid
           path names.

Mon Feb 20 12:30:42 1995  John Gilmore  (gnu at toad.com)

	* config.h, config.win:  Remove; merge them both into ../config.h.
	Now that we aren't using imake, this isn't a generated header file.

Mon Feb 20 15:25:26 1995 Keith Vetter (keithv@fusion.com)

	* config.h: changed API to INTERFACE.
        * config.win: changed API to INTERFACE and changed BITS16
           to SIZEOF_INT/SIZEOF_LONG to track an autoconf change.

Mon Feb 6 20:5:58 1995 Keith Vetter (keithv@fusion.com)

	* config.win: new file--windows base template for config.h
	* config.h: added API definition default of NULL

Thu Jan  5 17:01:03 1995  Theodore Y. Ts'o  (tytso@dcl)

	* Use the service names kerberos and kerberos-sec, instead of
		kerberos5 and kerberos4 --- the official port name is
		kerberos, after all!

Wed Nov 30 16:18:29 1994  Theodore Y. Ts'o  (tytso@dcl)

	* osconf.h, config.h: Remove remnants of unifdef support for
		building osconf.h and config.h, left over from the imake
		build system. 

	* osconf.h: Add #ifdef for Athena configuration.

Thu Oct 13 16:58:53 1994  Theodore Y. Ts'o  (tytso@dcl)

	* config.h: Define PROVIDE_DES_CBC_MD5 so that we include this
		cryptosystem.
